# alter-pm

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  lefthook.yml  package-lock.json  tauri.conf.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release-linux.yml  release.yml
.groupcode/: codegroups.json  functionalities.json
apt/dists/stable/: Release
apt/dists/stable/main/binary-amd64/: Packages
apt/dists/stable/main/binary-arm64/: Packages
apt/pool/main/: alter_0.4.0_amd64.deb  alter_0.4.0_arm64.deb  alter_0.5.0_amd64.deb  alter_0.5.0_arm64.deb  alter_0.6.0_amd64.deb  alter_0.6.0_arm64.deb  alter_0.7.0_amd64.deb  alter_0.7.0_arm64.deb  alter_0.8.0_amd64.deb  alter_0.8.0_arm64.deb  alter_1.0.0_amd64.deb  alter_1.0.0_arm64.deb
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  ECOSYSTEM_CONFIG.md  README.md  SECURITY.md  USER_GUIDE.md
installer/: alter-setup.iss
manifests/t/thechandanbhagat/alter/0.4.0/: thechandanbhagat.alter.installer.yaml
manifests/t/thechandanbhagat/alter/0.5.0/: thechandanbhagat.alter.installer.yaml  thechandanbhagat.alter.locale.en-US.yaml  thechandanbhagat.alter.yaml
release/: LICENSE  README.md
scripts/: release.ps1
src/: lib.rs  main.rs
src/api/: error.rs  middleware.rs  mod.rs
src/api/routes/: ai.rs  ecosystem.rs  git.rs  log_alerts.rs  logs.rs  mod.rs  notifications.rs  ports.rs  processes.rs  remote_servers.rs  scripts.rs  startup.rs  system.rs  telegram.rs  terminal.rs  terminal_history.rs  tunnels.rs  ui_settings.rs  update.rs
src/cli/: args.rs
src/cli/commands/: daemon.rs  startup.rs
src/client/: daemon_client.rs  mod.rs
src/config/: ecosystem.rs  env_file.rs  log_alert_config.rs  mod.rs  paths.rs  telegram_config.rs  tunnel_config.rs
src/daemon/: mod.rs  server.rs  signals.rs  state.rs
src/logging/: mod.rs  reader.rs  rotation.rs  writer.rs
src/models/: ai.rs  api_types.rs  cron_run.rs  log_stats.rs  metric_sample.rs  mod.rs  notification.rs  process_info.rs  process_status.rs  tunnel.rs
src/notifications/: dispatcher.rs  events.rs  sender.rs
src/notifications/channels/: discord.rs  email.rs  mod.rs  slack.rs  webhook.rs
src/process/: health.rs  instance.rs  manager.rs  mod.rs  restarter.rs  rolling_restart.rs  runner.rs  scheduler.rs  watcher.rs
src/telegram/: bot.rs  commands.rs  mod.rs
src/terminal/: mod.rs
src/tunnel/: mod.rs
src/utils/: format.rs
src/web/assets/: app.js  index.html  style.css
tests/: integration_tests.rs  unit_tests.rs
tests/integration/: daemon_lifecycle_test.rs
tests/unit/: api_types_test.rs  config_parse_test.rs  process_info_test.rs
userguide/: index.html
web-ui/: eslint.config.js  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css  types.ts
web-ui/src/components/: AiPanel.tsx  Dialog.tsx  DiscordIcon.tsx  GitHubStarBanner.tsx  NamespaceInput.tsx  NotifModal.tsx  NotificationTray.tsx  TerminalPanel.tsx
web-ui/src/components/settings/: AiTab.tsx  GeneralTab.tsx  LogAlertsTab.tsx  SecurityTab.tsx  SystemTab.tsx  TelegramTab.tsx  TerminalTab.tsx  TunnelsTab.tsx  UiTab.tsx  shared.tsx
web-ui/src/hooks/: useDaemonHealth.ts  useDialog.ts  useProcesses.ts  useSettings.ts
web-ui/src/lib/: api.ts  auth.ts  servers.ts  settings.ts
web-ui/src/pages/: AnalyticsPage.tsx  CreateCronJobPage.tsx  CronJobsPage.tsx  EditPage.tsx  LogVolumePage.tsx  LoginPage.tsx  NotificationsPage.tsx  PortFinderPage.tsx  ProcessDetailPage.tsx  ProcessesPage.tsx  ScriptsPage.tsx  SettingsPage.tsx  StartPage.tsx  TunnelsPage.tsx
web-ui/src/test/: example.test.ts  handlers.ts  msw-server.ts  setup.ts
web-ui/tests/unit/: scripts-page.test.tsx  utils.test.ts
winget/manifests/t/thechandanbhagat/alter/0.1.0/: thechandanbhagat.alter.installer.yaml  thechandanbhagat.alter.locale.en-US.yaml  thechandanbhagat.alter.yaml
winget/manifests/t/thechandanbhagat/alter/0.2.0/: thechandanbhagat.alter.installer.yaml  thechandanbhagat.alter.locale.en-US.yaml  thechandanbhagat.alter.yaml
winget/manifests/t/thechandanbhagat/alter/0.3.0/: thechandanbhagat.alter.installer.yaml  thechandanbhagat.alter.locale.en-US.yaml  thechandanbhagat.alter.yaml
(+1 files in other folders)
