[package]
name    = "alter"
version = "0.2.0"
edition = "2021"
description = "A PM2-like process manager — run and manage any application"

[[bin]]
name = "alter"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
axum               = { version = "0.8", features = ["macros"] }
tower-http         = { version = "0.6", features = ["cors", "trace"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
clap               = { version = "4", features = ["derive", "env"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
anyhow             = "1"
thiserror          = "2"
dashmap            = "6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender   = "0.2"
rust-embed         = { version = "8", features = ["axum-ex"] }
notify             = { version = "6", features = [] }
reqwest            = { version = "0.12", features = ["json", "stream"] }
futures            = "0.3"
async-stream       = "0.3"
dirs               = "5"
tokio-util         = { version = "0.7", features = ["codec"] }
bytes              = "1"
mime_guess         = "2"
socket2            = { version = "0.5", features = ["all"] }
cron               = "0.12"
sysinfo            = { version = "0.32", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
