[package]
name    = "alter"
version = "0.9.0"
edition = "2021"
description = "A process manager for your developers — run and manage any application"

[lib]
name = "alter"
path = "src/lib.rs"

[[bin]]
name = "alter"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
axum               = { version = "0.8", features = ["macros", "ws"] }
tower-http         = { version = "0.6", features = ["cors", "trace"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
clap               = { version = "4", features = ["derive", "env"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
anyhow             = "1"
thiserror          = "2"
dashmap            = "6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender   = "0.2"
rust-embed         = { version = "8", features = ["axum-ex"] }
notify             = { version = "6", features = [] }
reqwest            = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures            = "0.3"
async-stream       = "0.3"
dirs               = "5"
tokio-util         = { version = "0.7", features = ["codec"] }
bytes              = "1"
mime_guess         = "2"
socket2            = { version = "0.5", features = ["all"] }
cron               = "0.12"
sysinfo            = { version = "0.32", default-features = false, features = ["system"] }
dotenvy = "0.15.7"
argon2 = "0.5"
rand   = "0.8"
portable-pty = "0.8"
console-subscriber = { version = "0.4", optional = true }

[features]
tokio-console = ["dep:console-subscriber"]

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

# Faster release builds for day-to-day use — thin LTO, parallel codegen
[profile.release-fast]
inherits      = "release"
lto           = "thin"
codegen-units = 8
strip         = true
